--- a/style.css
+++ b/style.css
@@ -118,9 +118,10 @@ section{
 }
 .para{
     color: white;
-    /*margin-left: -40px;*/
-    margin-right: -100px;
+    margin-left: -40px;
     position: relative;
+    z-index: 10px;
+
 }
 .btn {
     border: 2px solid black;
