--- a/style.css
+++ b/style.css
@@ -112,8 +112,9 @@ section{
 }
 .para{
     color: white;
-    margin-right: 10px;
+    margin-right: -10px;
     text-indent: 10px;
+    left:50%;
 }
 
 .main{
