--- a/style.css
+++ b/style.css
@@ -112,8 +112,8 @@ section{
 }
 .para{
     color: white;
-    margin-right: -10px;
-    text-indent: 30px;
+    margin-left: -10px;
+    
    
 }
 .name{
