--- a/style.css
+++ b/style.css
@@ -113,22 +113,24 @@ section{
 .para{
     color: white;
     margin-left: -10px;
+    text-align: justify;
+    top: 100%;
+    
+    transform: translate(45%,30%);
     
    
 }
 .name{
+    text-align: justify;
     text-indent: 10px;
     margin-left: -10px;
-}
-
-.main{
     color: white;
-    text-align: justify;
-    
     top: 100%;
     
     transform: translate(45%,30%);
 }
+
+
 .btn {
     border: 2px solid black;
     background-color: white;
