--- a/style.css
+++ b/style.css
@@ -220,4 +220,57 @@ section{
     .leaf1{
         transform: rotateX(180deg);
     }
-    
+.loading{
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom:0;
+    z-index: 1000;
+    background: #000;
+}
+.loader{
+    width: 200px;
+    height: 200px;
+    line-height: 200px;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -100px;
+    font-size: 30px;
+    color:#fff;
+    perspective: 200px;
+}
+.animation1,
+.animation2{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 5px solid;
+    border-left-color: #10ac84;
+    border-top-color: #ff9f43;
+    border-right-color: #0984e3;
+    border-bottom-color: #d63031;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -100px;
+    animation: loadAnim 3s ;
+    animation-iteration-count: infinite;
+
+}
+.animation2{
+    animation: loadAnim2 3s ;
+    animation-iteration-count: infinite;
+
+}
+@keyframes loadAnim{
+    0%{transform: rotate3d(1,1,1,0deg);}
+    100%{transform: rotate3d(1,1,1,360deg);}
+}
+@keyframes loadAnim2{
+    0%{transform: rotate3d(1,1,1,0deg);}
+    100%{transform: rotate3d(1,1,1,360deg);}
+}
