--- a/aboutme.css
+++ b/aboutme.css
@@ -5,6 +5,8 @@ body{
     height: 100vh;
     transition:  all .5s;
     overflow: hidden;
+    font-family: 'Permanent Marker', cursive;
+    font-family: 'Ubuntu Condensed', sans-serif;
 }
 .rounded{
     left: 0;
@@ -17,13 +19,52 @@ body{
     border-radius: 25px;
 }
 .text{
-    color: white;
+    
     height: 100vh;
     width:50%;
     float: left;
+} 
 
-}
 .container
 {
   display: flex;
+}
+.text{
+    position: relative;
+
+}
+.text h2{
+    position: absolute;
+    
+    transform: translate(-50%,-50%);
+    font-size: 4em;
+}
+.text h2:nth-child(1)
+{
+    color: transparent;
+    -webkit-text-stroke: 2px #03a9f4;
+}
+.text h2:nth-child(2)
+{
+    color: #03a9f4;
+    animation: animate 4s ease-in-out infinite;
+    -webkit-text-stroke: 2px #03a9f4;
+}
+@keyframes animate{
+    0%,100%{
+        clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
+    }
+    50%{
+        clip-path: polygon( 0% 60%, 16% 65%,34% 66%, 51% 62%, 67% 50% ,84% 45%, 100% 46%,100% 100%, 0% 100%);
+    }
+}
+.para{
+    color: white;
+    right: 0;
+    height: 100vh;
+    width:100%;
+    margin-top: 150px;
+    margin-left: -200px;
+    size: 5em;
+   
 }
