--- a/contactMe.css
+++ b/contactMe.css
@@ -1,36 +1,95 @@
 body{
     padding: 0;
     margin: 0;
-}
-.middle{
+    background: black;
+  }
+  .middle{
     position: absolute;
-    top:50%;
+    top: 50%;
     transform: translateY(-50%);
-    width:100%;
+    width: 100%;
     text-align: center;
-}
-.btn{
+  }
+  .btn{
     display: inline-block;
     width: 90px;
     height: 90px;
-    background: #FF5733   ;
-    margin:10px;
+    background: #f1f1f1;
+    margin: 10px;
     border-radius: 30%;
     box-shadow: 0 5px 15px -5px #00000070;
     color: #3498db;
     overflow: hidden;
     position: relative;
-}
-.btn i{
+  }
+  .btn i{
     line-height: 90px;
     font-size: 26px;
     transition: 0.2s linear;
-
-}
-.btn:hover i{
+  }
+  .btn:hover i{
     transform: scale(1.3);
     color: #f1f1f1;
+  }
+  .btn::before{
+    content: "";
+    position: absolute;
+    width: 120%;
+    height: 120%;
+    background: #3498db;
+    transform: rotate(45deg);
+    left: -110%;
+    top: 90%;
+  }
+  .btn:hover::before{
+    animation: aaa 0.7s 1;
+    top: -10%;
+    left: -10%;
+  }
+  @keyframes aaa {
+    0%{
+      left: -110%;
+      top: 90%;
+    }50%{
+      left: 10%;
+      top: -30%;
+    }100%{
+      top: -10%;
+      left: -10%;
+    }
+  }
+  .text{
+    position: absolute;
+    margin-left: 700px;
+    transform: translateY(-50%);
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+
 }
-.btn ::before{
-    
+.text h2{
+    position: absolute;
+    font-family: Arial, Helvetica, sans-serif;
+    transform: translate(-50%,-50%);
+    font-size: 4em;
 }
+.text h2:nth-child(1)
+{
+    color: transparent;
+    -webkit-text-stroke: 2px #03a9f4;
+}
+.text h2:nth-child(2)
+{
+    color: #03a9f4;
+    animation: animate 4s ease-in-out infinite;
+    -webkit-text-stroke: 2px #03a9f4;
+}
+@keyframes animate{
+    0%,100%{
+        clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
+    }
+    50%{
+        clip-path: polygon( 0% 60%, 16% 65%,34% 66%, 51% 62%, 67% 50% ,84% 45%, 100% 46%,100% 100%, 0% 100%);
+    }
+}
+  
