--- a/contactMe.css
+++ b/contactMe.css
@@ -2,18 +2,22 @@ body{
     padding: 0;
     margin: 0;
     background: black;
+    overflow: hidden;
+  }
+  .map{
+    margin-top: 30%;
   }
   .middle{
     position: absolute;
-    top: 50%;
+    top: 40%;
     transform: translateY(-50%);
     width: 100%;
     text-align: center;
   }
   .btn{
     display: inline-block;
-    width: 90px;
-    height: 90px;
+    width: 70px;
+    height: 70px;
     background: #f1f1f1;
     margin: 10px;
     border-radius: 30%;
@@ -23,7 +27,7 @@ body{
     position: relative;
   }
   .btn i{
-    line-height: 90px;
+    line-height: 80px;
     font-size: 26px;
     transition: 0.2s linear;
   }
@@ -59,12 +63,12 @@ body{
     }
   }
   .text{
-    position: absolute;
+    
     margin-left: 700px;
     transform: translateY(-50%);
     width: 100%;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 40px;
 
 }
 .text h2{
@@ -92,4 +96,5 @@ body{
         clip-path: polygon( 0% 60%, 16% 65%,34% 66%, 51% 62%, 67% 50% ,84% 45%, 100% 46%,100% 100%, 0% 100%);
     }
 }
+
   
