--- a/contactMe.css
+++ b/contactMe.css
@@ -4,8 +4,10 @@ body{
     background: black;
     overflow: hidden;
   }
-  .map{
-    margin-top: 30%;
+  iframe{
+    
+    position: relative;
+   margin-top: 20%;
   }
   .middle{
     position: absolute;
@@ -19,12 +21,16 @@ body{
     width: 70px;
     height: 70px;
     background: #f1f1f1;
-    margin: 10px;
+    margin: 20px;
     border-radius: 30%;
     box-shadow: 0 5px 15px -5px #00000070;
     color: #3498db;
     overflow: hidden;
     position: relative;
+    
+    margin-top: 2px;
+
+
   }
   .btn i{
     line-height: 80px;
@@ -63,16 +69,18 @@ body{
     }
   }
   .text{
-    
-    margin-left: 700px;
-    transform: translateY(-50%);
-    width: 100%;
+    position: relative;
+    margin-left: 1000px;
+    transform: translate(-50%);
+    width: 50%;
     text-align: center;
-    margin-top: 40px;
+    margin-bottom: -100px;
+    color: white;
+    margin-top: 10%;
 
 }
 .text h2{
-    position: absolute;
+  position: absolute;
     font-family: Arial, Helvetica, sans-serif;
     transform: translate(-50%,-50%);
     font-size: 4em;
@@ -96,5 +104,12 @@ body{
         clip-path: polygon( 0% 60%, 16% 65%,34% 66%, 51% 62%, 67% 50% ,84% 45%, 100% 46%,100% 100%, 0% 100%);
     }
 }
+footer {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  color: white;
+  text-align: center;
+}
+
 
   
