--- a/aboutme.css
+++ b/aboutme.css
@@ -1,5 +1,5 @@
+@media only screen and (max-width: 450px){
 body{
-    background: url(https://www.fg-a.com/wallpapers/2020-black-crystalline-peaks-image.jpg) no-repeat;
     background-position: center;
     background-size: cover;
     height: 100vh;
@@ -8,52 +8,99 @@ body{
     font-family: 'Open Sans Condensed', sans-serif;
 }
 img {
+    width: 30px;
+    height: 30px;
+    margin-bottom: 5px;
+    
+  }
+.btn {
+    border: 2px solid black;
+    padding: 14px 35px;
+    font-size: 16px;
+    cursor: pointer;
+}
+.info {
+    border-color: #2196F3;
+}
+.info:hover {
+    background: #2196F3;
+}
+.rounded{
+    left: 30%;
+    height: 100vh;
+    width:50%;
+    margin-top: 150px;
+    margin-left: 100px;
+    top: 30%;
+
+}
+.rounded img{
+    width: 100px;
+    height: 100px;  
+    border-radius: 25px;
+   
+}
+.text{
+    height: 100vh;
+    width:50%;
+    float: left;
+    top: 30%;
+    left:60%;
+} 
+.container
+{
+  display: flex;
+}
+.text h2{
+    position: absolute;
+    font-family: Arial, Helvetica, sans-serif;
+    transform: translate(-50%,-50%);
+    font-size: 4em;
+}
+.para{
+    right: 0;
+    height: 100vh;
+    width:100%;
+    margin-top: 150px;
+    margin-left: -200px;
+    font-size: 1.3em;
+    }
+}
+body{
+    background: black;
+    background-position: center;
+    background-size: cover;
+    transition:  all .5s;
+    overflow: hidden;
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+img {
+    width: 300px;
+    height: 300px;
+    margin-top: 100px;
+    margin-left: 20px;
     border: 5px solid #03a9f4;
   }
 .btn {
     border: 2px solid black;
     background-color: white;
     color: black;
-    padding: 14px 35px;
-    font-size: 16px;
     cursor: pointer;
-    
-  
-    
 }
 .info {
     border-color: #2196F3;
-    color: black;
 }
-
 .info:hover {
     background: #2196F3;
     color: black;
 }
-.rounded{
-    left: 0;
-    height: 100vh;
-    width:50%;
-    margin-top: 150px;
-    margin-left: 100px;
-}
-.rounded img{
-    border-radius: 25px;
-}
-.text{
-    
-    height: 100vh;
-    width:50%;
-    float: left;
-} 
-
 .container
 {
   display: flex;
 }
 .text{
     position: relative;
-
+    color: white;
 }
 .text h2{
     position: absolute;
@@ -86,7 +133,6 @@ img {
     height: 100vh;
     width:100%;
     margin-top: 150px;
-    margin-left: -200px;
+    margin-left: -100px;
     font-size: 1.3em;
-   
 }
