--- a/aboutme.css
+++ b/aboutme.css
@@ -81,6 +81,8 @@ img {
         margin-left: 50px;
     }
     .rounded img{
+        margin-top: 20px;
+        margin-left: 100px;
         border-radius: 25px;
         width: 150px;
         height: 150px;
@@ -89,6 +91,7 @@ img {
         height: 100vh;
         width:50%;
         float: left;
+        position: fixed;
     } 
     .container
     {
@@ -96,12 +99,12 @@ img {
     }
     .text{
         position: relative;
+        bottom: -100px;
     }
     .text h2{
-        position: absolute;
         font-family: Arial, Helvetica, sans-serif;
         transform: translate(-50%,-50%);
-        font-size: 1.5em;
+        font-size: 2.1em;
     }
     .para{
         right: 0;
@@ -111,8 +114,6 @@ img {
         bottom: 30px;
         font-size: 1em;
         text-align: justify;
-
-        
     }
 }
 body{
@@ -173,4 +174,58 @@ img {
 }
 .para{
     color: white;
+}
+.loading{
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom:0;
+    z-index: 1000;
+    background: #000;
+}
+.loader{
+    width: 200px;
+    height: 200px;
+    line-height: 200px;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -100px;
+    font-size: 30px;
+    color:#fff;
+    perspective: 200px;
+}
+.animation1,
+.animation2{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 5px solid;
+    border-left-color: #10ac84;
+    border-top-color: #ff9f43;
+    border-right-color: #0984e3;
+    border-bottom-color: #d63031;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -100px;
+    animation: animation1 3s ;
+    animation-iteration-count: infinite;
+
+}
+.animation2{
+    animation: animation2 3s ;
+    animation-iteration-count: infinite;
+
+}
+@keyframes animation1{
+    0%{transform: rotate3d(1,1,1,0deg);}
+    100%{transform: rotate3d(1,1,1,360deg);}
+}
+@keyframes animation2{
+    0%{transform: rotate3d(1,1,1,0deg);}
+    100%{transform: rotate3d(1,1,1,-360deg);}
 }
