--- a/style.css
+++ b/style.css
@@ -455,48 +455,58 @@ section {
     transform: rotateX(180deg);
 }
 
-.loading {
+.loading{
     position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom:0;
+    z-index: 1000;
     background: #000;
 }
-
-.loader {
+.loader{
+    width: 200px;
+    height: 200px;
+    line-height: 200px;
     text-align: center;
     position: absolute;
-    color: #fff;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -100px;
+    font-size: 30px;
+    color:#fff;
     perspective: 200px;
 }
-
 .animation1,
-.animation2 {
+.animation2{
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 5px solid;
     border-left-color: #10ac84;
     border-top-color: #ff9f43;
     border-right-color: #0984e3;
     border-bottom-color: #d63031;
     position: absolute;
-    animation: animation1 3s;
+    left: 50%;
+    top: 50%;
+    margin: -100px 0 0 -100px;
+    animation: animation1 3s ;
     animation-iteration-count: infinite;
-}
 
-.animation2 {
-    animation: animation2 3s;
+}
+.animation2{
+    animation: animation2 3s ;
     animation-iteration-count: infinite;
-}
 
-@keyframes animation1 {
-    0% {
-        transform: rotate3d(1, 1, 1, 0deg);
-    }
-    100% {
-        transform: rotate3d(1, 1, 1, 360deg);
-    }
 }
-
-@keyframes animation2 {
-    0% {
-        transform: rotate3d(1, 1, 1, 0deg);
-    }
-    100% {
-        transform: rotate3d(1, 1, 1, -360deg);
-    }
+@keyframes animation1{
+    0%{transform: rotate3d(1,1,1,0deg);}
+    100%{transform: rotate3d(1,1,1,360deg);}
+}
+@keyframes animation2{
+    0%{transform: rotate3d(1,1,1,0deg);}
+    100%{transform: rotate3d(1,1,1,-360deg);}
+}
 }
