--- a/certificates.css
+++ b/certificates.css
@@ -5,6 +5,7 @@ body,html{
     width: 100%;
     height: 100%;
     background-color: black;
+    overflow: hidden;
 }
 .container{
     width: 100%;
