--- a/contactMe.css
+++ b/contactMe.css
@@ -1,13 +1,15 @@
-body{
+
+  body{
     padding: 0;
     margin: 0;
+    overflow: hidden;
     background: black;
     overflow: hidden;
   }
   iframe{
-    
     position: relative;
-   margin-top: 20%;
+    margin-top:20rem;
+    width: 85rem;
   }
   .middle{
     position: absolute;
@@ -20,17 +22,14 @@ body{
     display: inline-block;
     width: 70px;
     height: 70px;
-    background: #f1f1f1;
     margin: 20px;
     border-radius: 30%;
     box-shadow: 0 5px 15px -5px #00000070;
-    color: #3498db;
     overflow: hidden;
     position: relative;
-    
     margin-top: 2px;
-
-
+    background: #f1f1f1;
+    color: #3498db;
   }
   .btn i{
     line-height: 80px;
@@ -75,15 +74,16 @@ body{
     width: 50%;
     text-align: center;
     margin-bottom: -100px;
-    color: white;
     margin-top: 10%;
-
+    text-align: center;
+    color: white;
 }
 .text h2{
   position: absolute;
     font-family: Arial, Helvetica, sans-serif;
     transform: translate(-50%,-50%);
-    font-size: 4em;
+    font-size: 4rem;
+    
 }
 .text h2:nth-child(1)
 {
@@ -105,11 +105,15 @@ body{
     }
 }
 footer {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  color: white;
   text-align: center;
+  color: white;
+  margin-top: 0.1rem;
+  
 }
-
-
+  @media only screen and (max-width: 450px){
+    body{
+      width:50%;
+      height:50%;
+    }
+  }
   
