--- a/contactMe.css
+++ b/contactMe.css
@@ -10,6 +10,7 @@
     position: relative;
     margin-top:20rem;
     width: 85rem;
+    height:10rem;
   }
   .middle{
     position: absolute;
@@ -69,7 +70,7 @@
   }
   .text{
     position: relative;
-    margin-left: 1000px;
+    margin-left: 62rem;
     transform: translate(-50%);
     width: 50%;
     text-align: center;
@@ -112,8 +113,52 @@ footer {
 }
   @media only screen and (max-width: 450px){
     body{
-      width:50%;
-      height:50%;
+      width:100%;
+      height:100%;
+      overflow:hidden;
     }
+    iframe{
+    position: relative;
+    margin-top:22rem;
+    width: 20rem;
+  }
+  .btn{
+    display: inline-block;
+    width: 35px;
+    height: 35px;
+    margin: 20px;
+    border-radius: 30%;
+    box-shadow: 0 5px 15px -5px #00000070;
+    overflow: hidden;
+    position: relative;
+    margin-top: 2px;
+    background: #f1f1f1;
+    color: #3498db;
+  }
+  .btn i{
+    line-height: 40px;
+    font-size: 16px;
+    transition: 0.2s linear;
+  }
+  .text{
+    position: relative;
+    margin-left: 20rem;
+    transform: translate(-50%);
+    width: 100%;
+    text-align: center;
+    margin-bottom: -50px;
+    margin-top: 10%;
+}
+.text h2{
+    transform: translate(-50%,-50%);
+    font-size: 3rem;
+}
+  footer {
+  text-align: center;
+  color: white;
+  margin-top: 1rem;
+  
+}
+
   }
   
